# exrio

./: .gitignore  Cargo.toml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
examples/: benchmark.py  ocio.py  run.py
rust/: Cargo.toml
rust/src/: lib.rs  pyattributes.rs
scripts/: setversion.sh
src/: attributes.rs  lib.rs  pyattributes.rs
src/exrio/: __init__.py  image.py
tests/: test_exrio.py  test_exrio_rust.py  test_image.py
tests/fixtures/: ACES-2065-1.exr  ACEScct.exr  ACEScg.exr  sRGB.exr
typings/: PyOpenColorIO.pyi
