[package]
name = "exrio"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "exrio"
crate-type = ["cdylib"]

[dependencies]
exr = "1.73.0"
numpy = "0.23.0"

[dependencies.pyo3]
version = "0.23"
features = ["extension-module", "abi3", "abi3-py39"]
